--- a/public/css/simplesimon.css
+++ b/public/css/simplesimon.css
@@ -1,19 +1,30 @@
 #blue {
     background-color: blue;
+    border-radius:0 100% 0 0;
     height: 200px;
     width: 200px;
-    
+    padding:0px;
 }
 #green {
     background-color: green;
+    border-radius:0 0 0 100%;
     height: 200px;
     width: 200px;
-   
+    padding:0px;
 }
 #red {
     background-color: red;
+    border-radius:100% 0 0 0;
     height: 200px;
     width: 200px;
+    padding:0px;
+}
+#yellow {
+    background-color: yellow;
+    border-radius:0 0 100% 0;
+    height: 200px;
+    width: 200px;
+    padding:0px;
 
 }
 #idOfStart {
@@ -21,10 +32,4 @@
     height: 200px;
     width: 200px;
 
-}
-#yellow {
-    background-color: yellow;
-    height: 200px;
-    width: 200px;
-  
 }
