--- a/public/css/simplesimon.css
+++ b/public/css/simplesimon.css
@@ -7,7 +7,11 @@
     float: left;
     border: 1px;
     z-index: 1;
-    opacity: 0.5;
+    opacity: 0.65;
+}
+
+.failPanda {
+    display:none;
 }
 
 .swirlyDoodle {
@@ -17,32 +21,34 @@
     display: none;
 }
 
-.failPanda {
-    display:none;
+.hyperSpace {
+    position: relative;
+    z-index: 1;
+    opacity:0.3;
 }
 
 #blue {
-    background-color: blue;
+    background-color: #4235fe;
     border-radius:0 100% 0 0;
     outline: none;
     
 }
 #green {
-    background-color: green;
+    background-color: #56fe39;
     border-radius:0 0 0 100%;
     outline: none;
 
 
 }
 #red {
-    background-color: red;
+    background-color: #fd3a0e;
     border-radius:100% 0 0 0;
     outline: none;
 
 
 }
 #yellow {
-    background-color: yellow;
+    background-color: #fefe3a;
     border-radius:0 0 100% 0;
     outline: none;
 
@@ -53,8 +59,13 @@
     font-size: 40px;
 }
 
+#bottomRow {
+  clear: left;
+}
+
+
 #idOfStart {
-    background-color: dodgerblue;
+    background-color: #fb15b3;
     border-radius: 100%;
     height: 50px;
     width: 50px;
@@ -66,8 +77,10 @@
     top: -25px;
 
 }
-#bottomRow {
-  clear: left;
+
+body {
+    background-image: url("/img/colorful-background.jpg");
+    background-color: #cccccc;
 }
 
 
@@ -75,11 +88,7 @@
 
 
 
-
-
-
-
-
+/*all the css for the swirlyDoodle*/
 
 body {
   overflow: hidden;
